# lib-updates

./: .env.example  README.md  main.py  pyproject.toml  state.json  state.template.json
.github/workflows/: bot_cron.yml
services/: github_connector.py  llm_connector.py  tg_sender.py
settings/: __init__.py  settings.py
